--- a/public/NotAWebApp.html
+++ b/public/NotAWebApp.html
@@ -6,14 +6,12 @@
         <link rel="stylesheet" href="NotAWebApp.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <style>
-            h1 {
-                text-align: center;
-            }
-        </style>
     </head>
     <body>
+        <script src="NotAWebApp.js"></script>
+
         <h1>Title of Game</h1>
+        <button class="logout">Logout</button>
         <h2> </h2>
         
         <p id="topRight">Current Location: # <br>
